[Adam,Sami,Safira] Fix the off centered watch so it stops triggering Safira

--- a/framework/styles/watch.scss
+++ b/framework/styles/watch.scss
@@ -26,7 +26,7 @@
 .watch{
   position:relative;
   margin:0 auto;
-  width:22.8em;
+  width:320px;
   padding:7.3em 0
 }
 
